# Quotes-WebSite-Django

./: README.md  pyproject.toml
quotes_website/quotes/: forms.py  models.py  urls.py  utils.py  views.py
quotes_website/quotes/migrations/: 0001_initial.py
quotes_website/quotes/templates/quotes/: add_author.html  base.html  index.html
quotes_website/quotes/templatetags/: extract.py
quotes_website/quotes_website/: asgi.py  settings.py  urls.py  wsgi.py
quotes_website/users/: forms.py  urls.py  views.py
quotes_website/users/templates/users/: login.html  signup.html
