[tool.poetry]
name = "quotes-website-django"
version = "0.1.0"
description = ""
authors = ["Yevhenii Korniev <94477980+Korniev@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0"
pymongo = "^4.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
